--- a/public/us.html
+++ b/public/us.html
@@ -74,9 +74,9 @@
     <body>
         
 <center>
-<a href="index.html" class="button">คลิกเพื่อเปลี่ยนประเทศ</a>
+<a href="canada.html" class="button">คลิกเพื่อเปลี่ยนประเทศ</a>
 <p>ประเทศสหรัฐอเมริกา</p>
-        <p style="font-size: 200%;">ประธานธิบดีคนที่ 45 ของสหรัฐอมเริกาหรือประธานธิบดีคนปัจจุบันอยู่ในตำเเหน่งมาเเล้ว...</p>
+        <p style="font-size: 200%;">ประธานธิบดีคนที่ 46 ของสหรัฐอมเริกาหรือประธานธิบดีคนปัจจุบันอยู่ในตำเเหน่งมาเเล้ว...</p>
 
 
         <p>(20 มกราคม พ.ศ. 2564)</p>
