--- a/public/index.html
+++ b/public/index.html
@@ -156,7 +156,7 @@
     <p>If you want to support me pls share this page on your social media</p>
 </details>
 <footer class="right">
-  <p style="font-size: 16px"><a href="https://resolutioncon.com/" style="color: white; text-decoration: none;" target="_blank">ร่วมช่วยกัน "ขอคนละชื่อรื้อระบอบประยุทธ์" |</a> <a href="https://github.com/ronnapatsri/intheofficefor" style="color: white; text-decoration: none;" target="_blank"> Github | </a> <a href="https://twitter.com/Ronnapat20" style="color: white; text-decoration: none;" target="_blank"> Twitter </a></p>
+  <p style="font-size: 16px"><a href="https://worldeducation.vercel.app/" style="color: white; text-decoration: none;" target="_blank">World Education |</a> <a href="https://github.com/ronnapatsri/intheofficefor" style="color: white; text-decoration: none;" target="_blank"> Github | </a> <a href="https://twitter.com/Ronnapat20" style="color: white; text-decoration: none;" target="_blank"> Twitter </a></p>
 </footer>
     <!-- The core Firebase JS SDK is always required and must be listed first -->
 <script src="/__/firebase/8.6.7/firebase-app.js"></script>
