--- a/us.html
+++ b/us.html
@@ -189,7 +189,7 @@ var x = setInterval(function() {
   <p>If you want to support me pls share this page on your social media</p>
 </details>
 <footer class="right">
-<p style="font-size: 16px"><a href="https://resolutioncon.com/" style="color: white; text-decoration: none;" target="_blank">ร่วมช่วยกัน "ขอคนละชื่อรื้อระบอบประยุทธ์" |</a> <a href="https://github.com/ronnapatsri/intheofficefor" style="color: white; text-decoration: none;" target="_blank"> Github | </a> <a href="https://twitter.com/Ronnapat20" style="color: white; text-decoration: none;" target="_blank"> Twitter </a></p>
+<p style="font-size: 16px"><a href="https://worldeducation.vercel.app/" style="color: white; text-decoration: none;" target="_blank">World Education |</a> <a href="https://github.com/ronnapatsri/intheofficefor" style="color: white; text-decoration: none;" target="_blank"> Github | </a> <a href="https://twitter.com/Ronnapat20" style="color: white; text-decoration: none;" target="_blank"> Twitter </a></p>
 </footer>
 
 
