--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,41 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <style>
+            @font-face {
+    font-family: "Anakotmai";
+    font-style: normal;
+    font-weight: normal;
+    src: url("fonts/anakotmai/anakotmai-medium.eot"); /* IE9 Compat Modes */
+    src: url("fonts/anakotmai/anakotmai-medium.eot#iefix")
+        format("embedded-opentype"),
+      url("fonts/anakotmai/anakotmai-medium.woff2") format("woff2"),
+      url("fonts/anakotmai/anakotmai-medium.woff") format("woff");
+  }
+  @font-face {
+    font-family: "Anakotmai";
+    font-style: normal;
+    font-weight: bold;
+    src: url("fonts/anakotmai/anakotmai-bold.eot"); /* IE9 Compat Modes */
+    src: url("fonts/anakotmai/anakotmai-bold.eot#iefix")
+        format("embedded-opentype"),
+      url("fonts/anakotmai/anakotmai-bold.woff2") format("woff2"),
+      url("fonts/anakotmai/anakotmai-bold.woff") format("woff");
+  }
+  @font-face {
+    font-family: "Anakotmai";
+    font-style: normal;
+    font-weight: 300;
+    src: url("fonts/anakotmai/anakotmai-light.eot"); /* IE9 Compat Modes */
+    src: url("fonts/anakotmai/anakotmai-light.eot#iefix")
+        format("embedded-opentype"),
+      url("fonts/anakotmai/anakotmai-light.woff2") format("woff2"),
+      url("fonts/anakotmai/anakotmai-light.woff") format("woff");
+  }
+  * {
+    font-family: "Anakotmai", -apple-system, BlinkMacSystemFont, "Segoe UI",
+      Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+      sans-serif;
+  }
             body{
 
 
