--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       property="og:description"
       content="อยู่มานานเท่าไหร่เเล้วนะ"
       centent="V 1.0"    />
-      <meta property="og:image" content="https://lh3.googleusercontent.com/p0el07mhEsTILvVDh37DYdZN_Il_YATWDT7AeDfNAuXe0krDw9E4MdnK3CSlbBoRuOUHkP8b0jJ-05vFqBD4_PtqR2i3SzGu_9DJxG58D36Xr-O3M45Lt-otCE7qnaeWNtsLnnuBEhA1CPXKbNjKZs2yppYA5DHtRaNo1VyzA8ng3WaWgNe-jgWfX8aE8_CFyD_aFsweM1nBMqmpahu8FxBZkgWMqTkT9vj64fdd9wGCJVS2GLRkTOM3my0yqEazqBR9cZADzADJYTRxcvDtItw3JkcUowb0nsdWVCg5A103zEehNmhw-9VUdU_T1pzvisBFD4Ov9OSLcgm6fN3oWKH5DihTvtldWZsLw88M0oCdNsV-6bNNPXgtxqMYnm_CyFnX42OBmCzMGZaReOrp2HDH8InFhB2hF4uE824JFydPSoqbukNUSLVFkoCd4j_tZKsoBhRqYRQdyfCwtzi8CQeuSCvtUffkkqja0bxHSQQDNz9TXDBCa_RDTHv2hXwnih7Q-hfr7LT2WvE82B17h_6dFrdMyNdH0K3G4MeHf6W6yc45u4fIxn9jMo9vUXVZ_1Pqe01OmGQiPE6Oz5pG9gFmtp1XurVT_5kQcyrIx9natWw-YqNaivGzY8EbKxOdw5H0sjJsyR5PIAZfkqrAhRYgJ9E63_W0vlLwCF6VBokzlhKyXQ4gen8QaOt0bqd9a778VI7XvDiHJb8dZdOY3sU=w1920-h878-no?authuser=0">
+      <meta property="og:image" content="https://github.com/ronnapatp/timelapse/blob/main/projects/intheofficefor_home.png">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <style>
