--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       property="og:description"
       content="อยู่มานานเท่าไหร่เเล้วนะ"
       centent="V 1.0"    />
-      <meta property="og:image" content="https://github.com/ronnapatp/timelapse/blob/main/projects/intheofficefor_home.png">
+      <meta property="og:image" content="https://raw.githubusercontent.com/ronnapatp/timelapse/main/projects/intheofficefor_home.png">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <style>
